[gd_scene load_steps=6 format=3 uid="uid://c441kcf2pl3jx"]

[ext_resource type="Script" path="res://Scripts/church.gd" id="1_vt4co"]
[ext_resource type="Texture2D" uid="uid://wea7tr4d3uyc" path="res://Game_Sprites/Tilemaps/Castle/Castle_Phase1.png" id="2_275p4"]
[ext_resource type="Texture2D" uid="uid://8dpwdntw1d51" path="res://Game_Sprites/Tilemaps/Castle/Castle_Phase2.png" id="3_j4j8s"]
[ext_resource type="Texture2D" uid="uid://cxs0nl727c8hi" path="res://Game_Sprites/Tilemaps/Castle/Castle_Phase3.png" id="4_r17aa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mlrq"]
size = Vector2(1176, 1488)

[node name="Church" type="Area2D"]
z_index = 1
scale = Vector2(0.3, 0.3)
script = ExtResource("1_vt4co")

[node name="AfterGabija" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_275p4")

[node name="AfterMedeina" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_j4j8s")

[node name="AfterPerkunas" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_r17aa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(68, 1072)
shape = SubResource("RectangleShape2D_3mlrq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
